🚨 SECURITY FIX: Remove exposed Firebase API key and implement secure configuration
- Replace hardcoded API key with environment variables in firebase.ts
- Add firebase-config.example.ts template for secure setup
- Update .gitignore to prevent future credential exposure
- Add comprehensive security incident response documentation
- Implement secure configuration patterns

⚠️ URGENT: API key must be regenerated in Google Cloud Console
- Exposed key: AIzaSyDRV6l-1oJ7ZuwMHqcPWKe0dZ7NP-ua0iI
- Project: mixmi-66529
- See docs/SECURITY_INCIDENT_RESPONSE.md for next steps

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,15 @@ dist/
 .env.test.local
 .env.production.local
 
+# Firebase configuration with credentials
+firebase-config.ts
+admin/src/firebase-config.ts
+
+# API keys and secrets
+*.key
+*.pem
+service-account*.json
+
 # IDE
 .vscode/
 .idea/
